spacing corrected

--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,10 @@ body {
   grid-column: col-start 5 / full-end;
   padding: 6rem 12rem; }
 
+.story__text {
+  font-size: 1.5rem;
+  margin-bottom: 4rem; }
+
 .heading-1, .heading-2, .heading-3, .heading-4 {
   font-family: "Roboto", sans-serif;
   font-weight: 400; }
@@ -133,6 +137,19 @@ body {
   font-size: 1.5rem;
   text-transform: uppercase;
   padding: 1.8rem 3rem;
-  cursor: pointer; }
+  cursor: pointer;
+  transition: all 0.2s; }
   .btn:hover {
     background-color: #0a19a1; }
+
+.mb-sm {
+  margin-bottom: 2rem; }
+
+.mb-md {
+  margin-bottom: 3rem; }
+
+.mb-lg {
+  margin-bottom: 4rem; }
+
+.mb-hg {
+  margin-bottom: 8rem; }
